Fix/border-botton mobile

--- a/css/index.css
+++ b/css/index.css
@@ -695,7 +695,6 @@ body {
         border: 0;
         padding: 0;
         margin: 0;
-        border: 1px var(--border) solid;
 
         svg {
           width: 2.5rem;
